--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
   </head>
   <body>
     <header class="div__title">
-      <h1 class="title_svoboda"><br />Свобода</h1>
-
+      <div class="flexim">
+      <h1 class="title_svoboda "><br />Свобода</h1>
+      </div>
       <p class="title_p">
         Студия татуировки
       </p>
+      
     </header>
-    <article class="article wtf">
+    <article class="article backmovement">
+      <div class="article_div">
       <h3 class="whight">
         Чем мы отличаемся от десятка других Саратовских студий?
       </h3>
@@ -36,12 +39,13 @@
         Чем мы занимаемся?
       </h3>
       <ul class="list whight">
-        <li><strong>Высокое </strong>качество работы.</li>
-        <li><strong> Квалифицированные</strong> мастера.</li>
-        <li><strong>Полная</strong> стерильность.</li>
-        <li><strong>Бесплатная</strong> консультация до полного заживления.</li>
+        <li>Художественная татуировка любой сложности и стилистики.</li>
+        <li>Пирсинг любой сложности.</li>
+        <li>Разработка уникального эскиза.</li>
+        <li>Перекрытие старых татуировок.</li>
+        <li>Коррекция татуировок.</li>
       </ul>
-     
+      </div>
     </article>
     <article class="article">
       <div class="gallery">
@@ -50,28 +54,11 @@
         <div class="img_wrap" ><img src="Photo/33.jpg" alt=""></div>
         <div class="img_wrap" ><img src="Photo/44.jpg" alt=""></div>
         <div class="img_wrap" ><img src="Photo/55.jpg" alt=""></div>
+        <div class="img_wrap" ><img src="Photo/66.jpg" alt=""></div>
+        <div class="img_wrap" ><img src="Photo/77.jpg" alt=""></div>
+        <div class="img_wrap" ><img src="Photo/88.jpg" alt=""></div>
+        <div class="img_wrap" ><img src="Photo/99.jpg" alt=""></div>
     </div>
-    </article>
-    <article class="article">
-      <h3>
-        Почему же к нам?
-      </h3>
-      <p>
-        Ведь вокруг столько тату салонов, которые манят хорошими предложениями!
-      </p>
-      <ul class="list">
-        <li>
-          <strong>Эксклюзивность </strong>Мы нацелены, сделать вам картинку не
-          из Интернета. Правильный подход это хороший и уникальный эскиз
-        </li>
-        <li>
-          <strong> 4 уровня стерилизации</strong> Мы заботимся о здоровье наших
-          клиентов. Стерильность это не только одноразовые иголки. Все, что
-          берет мастер в руки, должно быть обернуто. Затем обработано
-          специальными растворами. Именно поэтому наша студия сфокусирована на
-          вашей безопасности.
-        </li>
-      </ul>
     </article>
   </body>
 </html>
