--- a/index.html
+++ b/index.html
@@ -9,11 +9,32 @@
 
     <link rel="stylesheet" href="SVOBODAstyle.css" />
     <link rel="stylesheet" href="Photo.css" />
-    
-    <script src="Background.js"></script>
+    <link rel="stylesheet" href="Batonstyle.css" />
 
+    <script src="Background.js"></script>
+    <script src="side.js"></script>
   </head>
   <body>
+      <div id="sidebar">
+          <div id="btsidebar" class="toggle-btn" onclick="openmenu(), btopenmenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <ul>
+            <li></li>
+            <li><a href="Photo.html"> Работы</a></li>
+            <li></li>
+            <li><a href="index.html#cu"> Контакты</a></li>
+            <li></li>
+            <li><a href="#au"> О нас</a></li>
+            <li></li>
+            <li><a href="https://vk.com/svobodatattoo" class="vk"> <img src="check/vk.png" alt="" class="vk"></a>
+              <a href="https://www.instagram.com/svobodatattoo" class="inst"> <img src="check/inst.png " alt="" class="vk"></a>
+            </li>
+          </ul>
+        </div>
+  
     <header class="div__title">
       <div class="flexim">
       <h1 class="title_svoboda "><br />Свобода</h1>
@@ -60,5 +81,23 @@
         <div class="img_wrap" ><img src="Photo/99.jpg" alt=""></div>
     </div>
     </article>
+    <article class="article">
+      <div class="article_div">
+      <h3 >
+       Почему именно к нам?
+      </h3>
+      <p>
+
+      </p>
+
+      <ul class="list">
+        <li><strong>Высокое </strong>качество работы.</li>
+        <li><strong> Квалифицированные</strong> мастера.</li>
+        <li><strong>Полная</strong> стерильность.</li>
+        <li><strong>Бесплатная</strong> консультация до полного заживления.</li>
+      </ul>
+      </article>
+
+     
   </body>
 </html>
