--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           </div>
           <ul>
             <li></li>
-            <li><a href="Photo.html"> Работы</a></li>
+            <li><a href="#au"> Работы</a></li>
             <li></li>
-            <li><a href="index.html#cu"> Контакты</a></li>
+            <li><a onclick="contdiv()"> Контакты</a></li>
             <li></li>
-            <li><a href="#au"> О нас</a></li>
+            <li><a href="auc"> О нас</a></li>
             <li></li>
             <li><a href="https://vk.com/svobodatattoo" class="vk"> <img src="check/vk.png" alt="" class="vk"></a>
               <a href="https://www.instagram.com/svobodatattoo" class="inst"> <img src="check/inst.png " alt="" class="vk"></a>
@@ -44,7 +44,7 @@
       </p>
     </div>
     </header>
-    <article class="article backmovement">
+    <article id="auc" class="article backmovement">
       <div class="article_div">
       <h3 class="whight">
         Чем мы отличаемся от десятка других Саратовских студий?
@@ -68,7 +68,7 @@
       </ul>
       </div>
     </article>
-    <article class="article">
+    <article id="au" class="article">
       <div class="gallery">
         <div class="img_wrap" ><img src="Photo/11.jpg" alt=""></div>
         <div class="img_wrap" ><img src="Photo/22.jpg" alt=""></div>
@@ -91,10 +91,12 @@
       </p>
 
       <ul class="list">
-        <li><strong>Высокое </strong>качество работы.</li>
-        <li><strong> Квалифицированные</strong> мастера.</li>
-        <li><strong>Полная</strong> стерильность.</li>
-        <li><strong>Бесплатная</strong> консультация до полного заживления.</li>
+        <li><strong>Эксклюзивность </strong>Мы нацелены, сделать вам
+          картинку не из Интернета. Правильный подход это хороший и уникальный эскиз.</li>
+        <li><strong> 4 уровня стерилизации</strong> Мы заботимя о здоровье наших клиентов. Стерильность это не только одноразовые иголки.
+        Все, что берет мастер в руки, должно быть обернуто. Затем
+      обработано специальными растворами. Именно поэтому наша студия сфокусирована на вашей безопасности.</li>
+      
       </ul>
       </article>
 
