--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li></li>
             <li><a href="#au"> Работы</a></li>
             <li></li>
-            <li><a  hred="#ca"> Контакты </a></li>
+            <li><a href="#ca"> Контакты </a></li>
             <li></li>
             <li><a href="#auc"> О нас</a></li>
             <li></li>
