--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
             <li></li>
             <li><a href="#au"> Работы</a></li>
             <li></li>
-            <li><a href="#ca"> Контакты </a></li>
-            <li></li>
             <li><a href="#auc"> О нас</a></li>
+            <li></li>
+            <li><a  hreа="#ca"> Контакты </a></li>
             <li></li>
             <li><a href="https://vk.com/svobodatattoo" class="vk"> <img src="check/vk.png" alt="" class="vk"></a>
               <a href="https://www.instagram.com/svobodatattoo" class="inst"> <img src="check/inst.png " alt="" class="vk"></a>
+            </li>
+            <li><a href="CUP.html" class="vk"> <img src="check/cuphead-marching.png" alt="" class="vk"></a>
+             
             </li>
           </ul>
         </div>
