--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <li></li>
             <li><a href="#auc"> О нас</a></li>
             <li></li>
-            <li><a  hreа="#ca"> Контакты </a></li>
+            <li><a  href="#ca"> Контакты </a></li>
             <li></li>
-            <li><a href="https://vk.com/svobodatattoo" class="vk"> <img src="https://psv4.userapi.com/c848128/u184098786/docs/d5/5b1055713c60/vkcom.svg?extra=kLzB_usDtB-6Yvkr4iL4jRL9aMGHRDinHAmtp2Eix5jhrt9dHXYaqZKpp5ffF1pLwNQjFssLPJBvsjlYlpyX_ai5j6dYuv_TB7MYi7nOSKPISjIuEQj9PnVTX6fWQVUSKnByjU_N_qAd_m-NXNfaeQ&dl=1" alt="" class="vk"></a>
-              <a href="https://www.instagram.com/svobodatattoo" class="inst"> <img src="https://psv4.userapi.com/c848128/u184098786/docs/d18/f2643026a8a2/instagram-2016.svg?extra=i5OvbIj5iuZILcVuFOgomiw2fj513hpvkp11xORgCJj3v58SU8zHNe7oG7zEp3q3zep-eN4wTayqFXZBQk94iVtkZGRwZgNx37yYeZJoqcp02Gq2yDUBO2Zqb8Zc84YK5sTLsQkt4UBETvaHy__Odg&dl=1 " alt="" class="vk"></a>
+            <li><a href="https://vk.com/svobodatattoo" class="vk"> <img src="check/vk.png" alt="" class="vk"></a>
+              <a href="https://www.instagram.com/svobodatattoo" class="inst"> <img src="check/inst.png" alt="" class="vk"></a>
             </li>
             <li><a href="CUP.html" class="vk"> <img src="check/cuphead-marching.png" alt="" class="vk"></a>
              
