--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <li></li>
             <li><a  href="#ca"> Контакты </a></li>
             <li></li>
-            <li><a href="https://vk.com/svobodatattoo" class="vk"> <img src="check/vk.png" alt="" class="vk"></a>
-              <a href="https://www.instagram.com/svobodatattoo" class="inst"> <img src="check/inst.png" alt="" class="vk"></a>
+            <li><a href="https://vk.com/svobodatattoo" class="vk"> <img src="check/vkcom.svg" alt="" class="vk"></a>
+              <a href="https://www.instagram.com/svobodatattoo" class="inst"> <img src="check/instagram.svg" alt="" class="vk"></a>
             </li>
             <li><a href="CUP.html" class="vk"> <img src="check/cuphead-marching.png" alt="" class="vk"></a>
              
